--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
-    "prettier": "^2.5.0"
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "prettier": "^2.5.0",
+    "sequelize": "*"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.3.0",
     "sucrase": "^3.20.3"
   }
 }
